--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@types/enzyme-adapter-react-16": "^1.0.6",
     "@types/react-router-dom": "^5.1.3",
     "husky": "^4.2.3",
+    "jest-styled-components": "^7.0.0",
     "prettier": "^1.19.1",
     "pretty-quick": "^2.0.1"
   }
